my profile page

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <div class="container">
         <div  class="card-white" id="introduction">
           <img src="images/blow-mind-mind-blown.gif" width="100px" alt="BLOWINGMIND">
-        <p> I started this new journey in the Dev world and it's been MIND BLOWING! I even started drinking coffee!
+        <p> I started this new journey in the Dev world and it's been MIND BLOWING!
             (It's been 1 week since I only dream about bugs, somebody help me pls!)
             ⚠️ WORK IN PROGRESS ⚠️
         </p>
